# git-collect

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
benchmarks/: bench_scanner.py
docs/: 30_DAY_PLAN.md  BADGE_STRATEGY.md  DASHBOARD.md  FALSE_POSITIVES.md  PRE_COMMIT.md  USAGE.md
src/gitcollect/: __init__.py  baseline.py  cli.py  ignore.py  scanner.py
tests/: test_baseline.py  test_cli.py  test_entropy.py  test_ignore.py  test_scanner.py
