[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitcollect"
version = "0.1.0"
description = "A lightweight Git repository hygiene scanner for security engineers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PhinehasNarh" }]
keywords = ["security", "git", "hygiene", "secrets", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.5"]

[project.scripts]
gitcollect = "gitcollect.cli:main"

[project.urls]
Homepage = "https://github.com/PhinehasNarh/git-collect"
Issues = "https://github.com/PhinehasNarh/git-collect/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
